k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-api
  labels:
    name: my-api
    environment: development
